# compact-skel-3d

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/algorithm/: delaunay_alg.rs  delaunay_struct.rs  mod.rs  skeleton_alg.rs  voronoi_interface.rs
src/algorithm/delaunay_interface/: delaunay_interface.rs  mod.rs
src/algorithm/delaunay_struct/: delaunay_struct.rs  mod.rs
src/algorithm/skeleton_interface/: mod.rs  movable_delaunay_path.rs  skeleton_interface.rs  skeleton_operations.rs  skeleton_path.rs  skeleton_separation.rs
src/algorithm/sub_algorithms/: delaunay_interface.rs  mod.rs  movable_delaunay_path.rs  path_part.rs  skeleton_boundary_path.rs  skeleton_interface.rs  skeleton_operations.rs  skeleton_path.rs  skeleton_problematic_path.rs  skeleton_region_growing.rs  skeleton_separation.rs  skeleton_singular_path.rs
src/algorithm/voronoi_interface/: mod.rs  voronoi_interface.rs  voronoi_operations.rs
src/boundary3d/: .delaunay_struct.rs.swp  .mod.rs.swp  .topo_mesh.rs.swp  delaunay_struct.rs  io.rs  mod.rs  topo_mesh.rs
src/geometry/: geometry_operations.rs  mod.rs
src/mesh3d/: generic_mesh3d.rs  io.rs  manifold_mesh3d.rs  mesh3d.rs  mesh_operations.rs  mod.rs
src/skeleton3d/: io.rs  mod.rs  skeleton3d.rs  voronoi_interface.rs
