[package]
name = "compact-skel-3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.18", features = ["derive"]}
anyhow = "1.0.66"
nalgebra = "0.31.3"
tritet = { version = "0.2.0", git = "https://github.com/user-9550748/tritet", default-features = false }
rand = "0.8.5"

[[bin]]
name = "soft_todelaunay"
path = "src/bin/soft_todelaunay.rs"
